--- a/.github/workflows/cd-bluegreen.yml
+++ b/.github/workflows/cd-bluegreen.yml
@@ -53,21 +53,11 @@ jobs:
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
-      - name: Move existing JAR files to old_build folder with timestamp
+
+      - name: SCP transfer
+        run: scp *.jar ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}:~/cicd
+
+      - name: Execute remote command
         run: |
-          ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "
-            TIMESTAMP=$(TZ="Asia/Seoul" date +"%Y%m%d%H%M%S");
-            mkdir -p ~/cicd/old_build && for f in ~/cicd/app-*.jar; do
-              if [ -f \$f ]; then
-                mv \$f ~/cicd/old_build/\$(basename \$f .jar)-\$TIMESTAMP.jar;
-              fi;
-            done"
-      - name: Rename and transfer artifact
-        run: |
-          mv *.jar app-8081.jar
-          scp app-8081.jar ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}:~/cicd/
-      - name: Execute remote commands
-        run: |
-          ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "sudo fuser -k 8081/tcp || true"
-          ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "sudo fuser -k 8082/tcp || true"
-          ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "sudo nohup /usr/bin/java -jar -Dserver.port=8081 ~/cicd/app-8081.jar > ~/cicd/nohup.log 2>&1 &"
+          ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "sudo chmod +x ~/cicd/bluegreen/deploy.sh"
+          ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "sudo ~/cicd/bluegreen/deploy.sh"
