refactor: 롤링 배포 전략 도입 후 cd-rolling.yml 파일 수정
롤링 배포 전략 도입 후 cd-rolling.yml 파일 수정

--- a/.github/workflows/cd-rolling.yml
+++ b/.github/workflows/cd-rolling.yml
@@ -52,32 +52,11 @@ jobs:
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
-      - name: Move existing JAR files to old_build folder with timestamp
-        run: |
-          ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "
-          TIMESTAMP=$(TZ="Asia/Seoul" date +"%Y%m%d%H%M%S");
-          mkdir -p ~/cicd/old_build && for f in ~/cicd/app-*.jar; do
-            if [ -f \$f ]; then
-              mv \$f ~/cicd/old_build/\$(basename \$f .jar)-\$TIMESTAMP.jar;
-            fi;
-          done"
-      - name: Rename and transfer artifact
-        run: |
-          JAR_FILE=$(ls *.jar | head -n 1)
-          cp $JAR_FILE app-8081.jar
-          cp $JAR_FILE app-8082.jar
-          scp app-8081.jar ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}:~/cicd/
-          scp app-8082.jar ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}:~/cicd/
 
-      - name: Stop existing applications
-        run: |
-          ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "sudo fuser -k 8081/tcp || true"
-          ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "sudo fuser -k 8082/tcp || true"
+      - name: SCP transfer
+        run: scp *.jar ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}:~/cicd
 
-      - name: Start application on port 8081
+      - name: Execute remote command
         run: |
-          ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "sudo nohup /usr/bin/java -jar -Dserver.port=8081 ~/cicd/app-8081.jar > ~/cicd/nohup-8081.log 2>&1 &"
-
-      - name: Start application on port 8082
-        run: |
-          ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "sudo nohup /usr/bin/java -jar -Dserver.port=8082 ~/cicd/app-8082.jar > ~/cicd/nohup-8082.log 2>&1 &"
+          ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "sudo chmod +x ~/cicd/deploy.sh"
+          ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "sudo ~/cicd/deploy.sh"
