fix: 롤링 배포 전략 도입 후 cd-rolling.yml 수정
롤링 배포 전략 도입 후 cd-rolling.yml 수정

--- a/.github/workflows/cd-rolling.yml
+++ b/.github/workflows/cd-rolling.yml
@@ -58,5 +58,5 @@ jobs:
 
       - name: Execute remote command
         run: |
-          ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "sudo chmod +x ~/cicd/deploy.sh"
-          ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "sudo ~/cicd/deploy.sh"
+          ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "sudo chmod +x ~/cicd/rolling/deploy.sh"
+          ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "sudo ~/cicd/rolling/deploy.sh"
